# automated_etl_pipeline

./: .gitignore  README.md  latest_release_note.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd-bluid-and-release.yml  ci-lint-and-test.yml
dataset_etl/: __init__.py  etl.py
test_files/: titanic_cleaned.csv
unittests/: test_etl.py
