[tool.poetry]
name = "dataset_etl"
version = "0.1.0"
description = "automated ETL pipeline using github actions for CI/CD workflow"
authors = ["tabsa <tas.tiago.sousa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tabsa/automated_etl_pipeline"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
mypy = "*"
wheel = "^0.45.1"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
